@@ -1,11 +1,11 @@
 /*
- * Copyright 2015-2018 the original author or authors.
+ * Copyright 2015-2020 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
  * accompanies this distribution and is available at
  *
- * http://www.eclipse.org/legal/epl-v20.html
+ * https://www.eclipse.org/legal/epl-v20.html
  */
 
 package platform.tooling.support.tests;
@@ -34,84 +34,50 @@ class MultiReleaseJarTests {
 	void checkDefault() throws Exception {
 		var variant = "default";
 		var expectedLines = List.of( //
+			">> BANNER >>", //
 			".", //
 			"'-- JUnit Jupiter [OK]", //
+			"  +-- ModuleUtilsTests [OK]", //
+			"  | +-- javaPlatformModuleSystemIsAvailable() [OK]", //
+			"  | +-- findAllClassesInModule() [OK]", //
+			"  | +-- findAllNonSystemBootModuleNames() [OK]", //
+			"  | '-- preconditions() [OK]", //
 			"  '-- JupiterIntegrationTests [OK]", //
-			"    +-- javaPlatformModuleSystemIsAvailable() [OK]", //
-			"    +-- javaScriptingModuleIsAvailable() [OK]", //
-			"    +-- moduleIsNamed() [OK]", //
+			"    +-- moduleIsNamed() [A] Assumption failed: not running on the module-path", //
 			"    +-- packageName() [OK]", //
 			"    '-- resolve() [OK]", //
 			"", //
 			"Test run finished after \\d+ ms", //
-			"[         2 containers found      ]", //
+			"[         3 containers found      ]", //
 			"[         0 containers skipped    ]", //
-			"[         2 containers started    ]", //
+			"[         3 containers started    ]", //
 			"[         0 containers aborted    ]", //
-			"[         2 containers successful ]", //
+			"[         3 containers successful ]", //
 			"[         0 containers failed     ]", //
-			"[         5 tests found           ]", //
+			"[         7 tests found           ]", //
 			"[         0 tests skipped         ]", //
-			"[         5 tests started         ]", //
-			"[         0 tests aborted         ]", //
-			"[         5 tests successful      ]", //
+			"[         7 tests started         ]", //
+			"[         1 tests aborted         ]", //
+			"[         6 tests successful      ]", //
 			"[         0 tests failed          ]", //
 			"" //
 		);
 
-		var result = mvn(variant, expectedLines);
+		var result = mvn(variant);
 
-		assertEquals(0, result.getExitCode(), result.toString());
+		result.getOutputLines("out").forEach(System.out::println);
+		result.getOutputLines("err").forEach(System.err::println);
+
+		assertEquals(0, result.getExitCode());
 		assertEquals("", result.getOutput("err"));
 		assertTrue(result.getOutputLines("out").contains("[INFO] BUILD SUCCESS"));
+
+		var workspace = Path.of("build/test-workspace/multi-release-jar", variant);
+		var actualLines = Files.readAllLines(workspace.resolve("target/junit-platform/console-launcher.out.log"));
+		assertLinesMatch(expectedLines, actualLines);
 	}
 
-	@Test
-	void checkNoScripting() throws Exception {
-		var variant = "no-scripting";
-		var expectedLines = List.of( //
-			".", //
-			"'-- JUnit Jupiter [OK]", //
-			"  '-- JupiterIntegrationTests [OK]", //
-			"    +-- javaPlatformModuleSystemIsAvailable() [OK]", //
-			"    \\Q+-- javaScriptingModuleIsAvailable() [X] Failed to evaluate condition" //
-					+ " [org.junit.jupiter.engine.extension.ScriptExecutionCondition]:" //
-					+ " Class `javax.script.ScriptEngine` is not loadable," //
-					+ " script-based test execution is disabled. If the originating" //
-					+ " cause is a `NoClassDefFoundError: javax/script/...` and the" //
-					+ " underlying runtime environment is executed with an activated" //
-					+ " module system (aka Jigsaw or JPMS) you need to add the" //
-					+ " `java.scripting` module to the root modules via" //
-					+ " `--add-modules ...,java.scripting`\\E", //
-			"    +-- moduleIsNamed() [OK]", //
-			"    +-- packageName() [OK]", //
-			"    '-- resolve() [OK]", //
-			"", //
-			">> STACKTRACE >>", //
-			"", //
-			"Test run finished after \\d+ ms", //
-			"[         2 containers found      ]", //
-			"[         0 containers skipped    ]", //
-			"[         2 containers started    ]", //
-			"[         0 containers aborted    ]", //
-			"[         2 containers successful ]", //
-			"[         0 containers failed     ]", //
-			"[         5 tests found           ]", //
-			"[         0 tests skipped         ]", //
-			"[         5 tests started         ]", //
-			"[         0 tests aborted         ]", //
-			"[         4 tests successful      ]", //
-			"[         1 tests failed          ]", //
-			"" //
-		);
-		var result = mvn(variant, expectedLines);
-
-		assertEquals(1, result.getExitCode(), result.toString());
-		assertEquals("", result.getOutput("err"));
-		assertTrue(result.getOutputLines("out").contains("[INFO] BUILD FAILURE"));
-	}
-
-	private Result mvn(String variant, List<String> expectedLines) throws Exception {
+	private Result mvn(String variant) {
 		var result = Request.builder() //
 				.setTool(Request.maven()) //
 				.setProject("multi-release-jar") //
@@ -121,10 +87,6 @@ class MultiReleaseJarTests {
 				.run();
 
 		assumeFalse(result.isTimedOut(), () -> "tool timed out: " + result);
-
-		var workspace = Path.of("build/test-workspace/multi-release-jar", variant);
-		var actualLines = Files.readAllLines(workspace.resolve("target/junit-platform/console-launcher.out.log"));
-		assertLinesMatch(expectedLines, actualLines);
 
 		return result;
 	}
